--- a/nba-who-am-i/apps/api/package.json
+++ b/nba-who-am-i/apps/api/package.json
@@ -17,9 +17,10 @@
     "@nestjs/platform-express": "^10.3.0",
     "@prisma/client": "^5.10.0",
     "@types/express": "^5.0.6",
+    "@vercel/node": "^5.5.16",
     "express": "^5.2.1",
-    "reflect-metadata": "^0.2.0",
     "prisma": "^5.10.0",
+    "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
