--- a/nba-who-am-i/apps/api/vercel.json
+++ b/nba-who-am-i/apps/api/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "pnpm install && pnpm prisma generate",
+  "installCommand": "pnpm install",
   "builds": [
     {
       "src": "api/index.ts",
